@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2009-09-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/jp2.c (ReadJP2Image): Fix scaling problem noticed when
+        reading 12-bit JP2 format.  Problem was reported by Steve Shaw.
+
+</UL>
+<p>
 2009-09-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
