@@ -1,3 +1,8 @@
+2009-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/jp2.c (ReadJP2Image): Fix scaling problem noticed when
+	reading 12-bit JP2 format.  Problem was reported by Steve Shaw.
+
 2009-09-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/unix_port.c (MagickGetMMUPageSize): Cache returned page
